# tabrl

./: .env.example  .gitignore  ACTION_PLAN.md  README.md  SESSION_CONTEXT.md  get_started.py  pyproject.toml  test_reward.py
backend/: .env.example  app.py  brax_wrapper.py  check_model_params.py  deploy_sassy_walk.sh  download_modal_model.py  export_onnx.py  hip_swing_policy.json  inference.py  jax_inference.py  menagerie_server.py  modal_custom_reward_training.py  modal_playground_training.py  playground_api.py  playground_integration.py  playground_trainer.py  render_brax_model.py  requirements.txt  rl_training.py  sassy_walk_reward.py  scene_parser.py  start.py  test_gemini.py  test_scene_parser.py  test_training.py  test_triple_quote_fix.py  training.py
backend/tests/: test_policy_generation.py  test_scene_parser.py
docs/: PRD_v3.md  PRD_v3.py  PRD_v4.md  TRAINING_PAGE_V2_DESIGN.md  TRAINING_PAGE_WIREFRAME.md  observations_explained.js
docs/frontend/: sample_model_loader.js
docs/webcontainer/: semantic_access.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  webcontainer-test.js
frontend/src/components/: MujocoTest.jsx  MujocoViewer.jsx  MultiViewerDemo.jsx  PlaygroundViewer.jsx  TrainingPageV2.css  TrainingPageV2.jsx
modal/: hello_world.py  training_env.py
scripts/: setup_scenes.sh
