[project]
name = "tabrl"
version = "0.1.0"
description = "Train Robots in Your Browser Tab"
requires-python = ">=3.12"

dependencies = [
    "modal",
    "fastapi[standard]",
    # AI/ML Dependencies
    "litellm",
    "numpy>=2.0.0",
    "onnxruntime>=1.18.0",
    # Data Processing
    "pydantic",
    # Development
    "python-dotenv",
    "mujoco>=3.3.2",
    "json-repair>=0.46.1",
    "jax>=0.6.1",
    "brax>=0.12.3",
    "mujoco-mjx>=3.3.2",
    "flax>=0.10.6",
    "playground>=0.0.4",
]

[tool.uv.sources]
# You can specify alternative package indexes here if needed
# e.g., my-index = { url = "https://my-index.com/simple" }
